Musteri ekleme,silme, düzenleme ,detaylar  eklendi

--- a/TasarımGiydirme1/Views/Home/Tasarım.cshtml
+++ b/TasarımGiydirme1/Views/Home/Tasarım.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Tasarım";
-}
-<h1> Merhaba Yeni Layout</h1>
-<h2>Tasarım</h2>
+} 
+<h1> @ViewData["Örnek"]></h1>
+<h2>@ViewBag.Header</h2>
 
